--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="certificate-inner">
                         <div class="certificate-header">
                             <div class="logo-container">
-                                <img src="logo.jpg" alt="Monte Sinai Logo" class="logo-img">
+                                <img src="logo.png" alt="Monte Sinai Logo" class="logo-img">
                             </div>
                             <div class="header-text">
                                 <h2 class="title-top">Augusta Respeitável Benfeitora e Excelsa</h2>
